fix(ScrollBtn): lower z-index from 1000 to 10 for improved stacking context fix(PsychologistsList): adjust avatar size and margin for better layout fix(FiltersBtn): update max-width and width properties for responsive design

--- a/src/components/FiltersBtn/FiltersBtn.module.css
+++ b/src/components/FiltersBtn/FiltersBtn.module.css
@@ -11,8 +11,9 @@
   justify-content: space-between;
   align-items: center;
 
-  max-width: 226px;
+  max-width: 100%;
   height: 48px;
+  width: 100%;
   padding: 16px 18px;
   border-radius: 14px;
 
@@ -85,4 +86,10 @@
 
 .selected {
   color: var(--black-color);
+}
+
+@media screen and (min-width: 768px) {
+  .dropdownHeader {
+    max-width: 226px;
+  }
 }
